Fix server creation modal not correctly changing layout on small screens

--- a/app/(main)/components/MainNavbar/components/CreateServerModal/styles.module.scss
+++ b/app/(main)/components/MainNavbar/components/CreateServerModal/styles.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/mixins";
+
 .modal {
   background-color: var(--bg-main);
   border-radius: var(--br);
@@ -28,8 +30,13 @@
 
 .form {
   display: flex;
+  flex-direction: column;
   gap: 2rem;
   margin-top: 1rem;
+
+  @include large-screen {
+    flex-direction: row;
+  }
 }
 
 .create-server {
